--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,8 @@ html {
   --gray-bgc: #f5f4fa;
   --dark-bgc: #2f303a;
   --link-icon: #afb1b8;
+  --duration: 250ms;
+  --cubic: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 body {
@@ -45,6 +47,7 @@ img {
 .link {
   text-decoration: none;
   color: inherit;
+  transition: color var(--duration) var(--cubic);
 }
 
 .link:hover,
@@ -68,6 +71,9 @@ img {
 
 .menu {
   display: inline-flex;
+}
+.menu .link {
+  padding: 32px 0;
 }
 
 .menu-item {
@@ -94,6 +100,18 @@ img {
 
 .current {
   color: var(--accent-color);
+  position: relative;
+}
+.current::after {
+  content: '';
+  position: absolute;
+  display: block;
+  height: 4px;
+  width: 100%;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+  left: 0;
+  bottom: 0;
 }
 button {
   cursor: pointer;
@@ -121,6 +139,10 @@ button {
   line-height: 1.62;
   text-align: center;
   color: var(--black-text-color);
+
+  transition: box-shadow var(--duration) var(--cubic),
+    color var(--duration) var(--cubic),
+    background-color var(--duration) var(--cubic);
 }
 
 .filter-button:hover,
@@ -221,6 +243,52 @@ button {
   background-color: var(--accent-color);
   color: var(--white-text-color);
 }
+.backdrop {
+  position: fixed;
+  background-color: rgba(0, 0, 0, 0.2);
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+
+  opacity: 1;
+  transition: opacity var(--duration) var(--cubic);
+}
+.is-hidden {
+  opacity: 0;
+  pointer-events: none;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 100%;
+  max-width: 528px;
+  min-height: 581px;
+  background-color: var(--white-text-color);
+  border-radius: 4px;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+
+  transform: translate(-50%, -50%) scale(1);
+  transition: transform var(--duration) var(--cubic);
+}
+.backdrop.is-hidden .modal {
+  transform: translate(-50%, -50%) scale(1.1);
+}
+.btn-close {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--white-text-color);
+}
 
 .feature-list {
   display: flex;
@@ -282,11 +350,31 @@ button {
 .about-list {
   display: flex;
 }
+
 .about-item {
+  position: relative;
   width: calc(100% / 3 - 60);
 }
+
 .about-item:not(:last-child) {
   margin-right: 30px;
+}
+.label {
+  position: absolute;
+  display: flex;
+  width: 370px;
+  height: 70px;
+  padding: 27 auto;
+  bottom: 0;
+  left: 0;
+
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(47, 48, 58, 0.8);
+  font-weight: 700;
+  line-height: 1.17;
+  color: var(--white-text-color);
+  text-transform: uppercase;
 }
 
 .team {
@@ -340,12 +428,15 @@ button {
   height: 44px;
   background-color: var(--white-text-color);
   border-radius: 50%;
+
+  transition: background-color var(--duration) var(--cubic);
 }
 
 .social-icons .icon {
   width: 20px;
   height: 20px;
   fill: var(--link-icon);
+  transition: fill var(--duration) var(--cubic);
 }
 .social-icons-link:hover,
 .social-icons-link:focus {
@@ -374,6 +465,9 @@ button {
   border: 1px solid var(--link-icon);
   border-radius: 4px;
   fill: var(--link-icon);
+
+  transition: fill var(--duration) var(--cubic),
+    border var(--duration) var(--cubic);
 }
 
 .company-icon-link:hover,
@@ -416,6 +510,8 @@ p {
   height: 44px;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
+
+  transition: background-color var(--duration) var(--cubic);
 }
 
 .social-link:hover,
@@ -455,6 +551,8 @@ p {
   color: var(--white-text-color);
 }
 
+/* Portfolio */
+
 .project-name {
   margin-top: 0px;
   margin-bottom: 10px;
@@ -477,9 +575,38 @@ p {
   margin-left: -30px;
 }
 
+.overlay {
+  position: relative;
+  width: 370px;
+  height: 294px;
+  overflow: hidden;
+}
+
+.overlay-text {
+  position: absolute;
+  display: flex;
+  top: 0;
+  left: 0;
+  padding-left: 24px;
+  padding-right: 24px;
+  height: 100%;
+
+  background-color: rgba(33, 150, 243, 0.9);
+  justify-content: center;
+  align-items: center;
+
+  color: var(--white-text-color);
+  font-size: 18px;
+  line-height: 1.55;
+
+  transform: translateY(100%);
+  transition: transform var(--duration) var(--cubic);
+}
+
 .project-item {
   margin-top: 30px;
   margin-left: 30px;
+  transition: box-shadow var(--duration) var(--cubic);
 }
 
 .project-item:hover,
@@ -488,46 +615,12 @@ p {
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
+.project-item:hover .overlay-text,
+.project-item:focus .overlay-text {
+  transform: translateX(0);
+}
+
 .card-content {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
-}
-.backdrop {
-  position: fixed;
-  background-color: rgba(0, 0, 0, 0.2);
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-}
-.is-hidden {
-  opacity: 0;
-  visibility: hidden;
-  pointer-events: none;
-}
-.modal {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 100%;
-  max-width: 528px;
-  min-height: 581px;
-  background-color: var(--white-text-color);
-  border-radius: 4px;
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
-    0px 2px 1px rgba(0, 0, 0, 0.2);
-}
-.btn-close {
-  position: absolute;
-  top: 8px;
-  right: 8px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 30px;
-  height: 30px;
-  border: 1px solid rgba(0, 0, 0, 0.1);
-  border-radius: 50%;
-  background-color: var(--white-text-color);
 }
